--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@stripe/stripe-js": "^8.4.0",
     "axios": "^1.6.2",
     "framer-motion": "^10.16.16",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
     "next": "14.0.4",
     "react": "18.2.0",
     "react-datepicker": "^4.25.0",
